prevent gap under help on hide animation

--- a/sass/_app.scss
+++ b/sass/_app.scss
@@ -207,8 +207,32 @@ $help-shadow:-3px -3px 6px rgba(0, 0, 0, 0.1);
 	border-bottom:0;
 	border-radius:10px 0 0 0;
 	box-shadow:$help-shadow;
-	@include transition(all 1s ease);
-	z-index:10;
+	@include transition(all 0.2s ease);
+	z-index:5;
+
+	&:after {
+		content:"";
+
+		position:absolute;
+		bottom:-1em;
+		left:-2px;
+
+		width:100%;
+		height:1em;
+
+		background:$color-nav;
+		border:$nav-border;
+		border-top:0;
+		border-bottom:0;
+		box-shadow:-3px 2px 6px rgba(0,0,0,0.1);
+	}
+
+	&:hover {
+		margin-top:-1.25em;
+	}
+	&.is-active:hover {
+		margin-top:0;
+	}
 
 	li { 
 		float:left;
@@ -235,4 +259,5 @@ $help-shadow:-3px -3px 6px rgba(0, 0, 0, 0.1);
 	border-radius:(10px 10px 0 0);
 	box-shadow:$help-shadow;
 	@include transition(all 0.2s ease);
+
 }
